--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -53,5 +53,6 @@
   }
   .display-msg {
     font-size: 1.5rem;
+    padding-top: 10px;
   }
 }
